# irem

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
src/: initialize.cc  initialize.h  irem.glade  main.cc  main.h  ui.cc
